# serializer version: 1
# name: test_real_bron_pipeline_snapshot[BW-boek1-algemene-bepalingen]
  '''
  ---
  tags: ["XI", "3.1"]
  itaa-lex-sectie: "XI"
  wet: "Burgerlijk Wetboek — Boek 1 — Algemene bepalingen"
  bron_rol: "itaa_lex"
  status: "beschikbaar"
  bijgewerkt: "24.12.2025"
  bron: "onbekend"
  chunk:
    level: 2
    type: "Art."
    sub_strategy:
  provenance:
    inputs:
      - id: resources/raw/wetteksten/BW-boek1-algemene-bepalingen.pdf
        sha256: ad2ba310c4c88af06d92641f8080f97a843a97717565956ee687d5928e0474cb
        version: 24.12.2025
    tooling:
      pipeline: tools/etl/convert.py
      pipeline_version: 6bc0c13
      model:
      prompt_version:
    generated_at: '<STRIPPED>'
    stale: false
    stale_reason:
    trust:
      status: unreviewed
      confirmed_at:
      confirmed_by: default
      rationale:
      layer1:
      layer2:
  ---
  
  # Burgerlijk Wetboek — Boek 1 — Algemene bepalingen
  
  *Bijgewerkt tot en met 24.12.2025 — gecoördineerde versie.*
  
  
  '''
# ---
# name: test_real_bron_pipeline_snapshot[WBTW-KB22jun2020-e-notariaat]
  '''
  ---
  tags: ["VI.B", "2.4"]
  itaa-lex-sectie: "VI.B"
  wet: "K.B. 22 juni 2020 tot uitvoering van art. 93ter WBTW, art. 412bis en 433–435 WIB92 en art. 35–37, 43–45 en 47 Wetboek Invordering inzake het e-notariaat"
  bron_rol: "itaa_lex"
  status: "beschikbaar"
  bijgewerkt: "2020"
  bron: "Fisconetplus.be (officieuze gecoördineerde versie)"
  chunk:
    level: 2
    type: "Art."
    sub_strategy:
  provenance:
    inputs:
      - id: resources/raw/wetteksten/btw-kbs/WBTW-KB22jun2020-e-notariaat.pdf
        sha256: be45dc386b376439de59378c86082c733e467259a0ac3b2762a84ac514054d31
        version: '2020'
    tooling:
      pipeline: tools/etl/convert.py
      pipeline_version: 6bc0c13
      model:
      prompt_version:
    generated_at: '<STRIPPED>'
    stale: false
    stale_reason:
    trust:
      status: unreviewed
      confirmed_at:
      confirmed_by: default
      rationale:
      layer1:
      layer2:
  ---
  
  # BTW KB 22/06/2020 — E-notariaat
  
  *Bijgewerkt tot en met 2020 — gecoördineerde versie.*
  
  Titel
  
  22 JUNI 2020. - Koninklijk besluit tot uitvoering van de artikelen 2, derde lid, 2quater en 8, tweede lid, van het
  
  Bron : FINANCIEN
  '''
# ---
